# openclaw-tools

./: telemetry.py
book-search-rag/: Dockerfile  Makefile  README.md  benchmark_rag.py  main.py  pyproject.toml  requirements.txt
book-search-rag/data/processed/: keyword_store.pkl
book-search-rag/data/processed/chroma_db/: chroma.sqlite3
book-search-rag/src/api/: server.py
book-search-rag/src/book_search_rag/api/: schemas.py  server.py
book-search-rag/src/book_search_rag/core/: retriever.py
book-search-rag/src/book_search_rag/ingestion/: chunker.py  parser.py
book-search-rag/src/book_search_rag/storage/: vector.py
book-search-rag/src/storage/: keyword.py
book-search-rag/tests/integration/: test_pipeline.py
book-search-rag/tests/unit/: test_chunker.py
ephemeral-rag/: ephemeral_api.py  ephemeral_rag.py  update_rag.py
hermit-hybrid-search/: _compat.py  advanced_retriever.py  bm25_store.py  chunker.py  config.py  hermit_brain.py  hermit_retriever.py  ingest.py  llm.py  main.py  mock_hermit_brain.py  parser.py  query.py  retriever.py  server.py  test_rag.py  vector_store.py  web_fallback.py
hermit-hybrid-search/chroma_db/0010f088-a635-4e88-a80b-78004520fa59/: index_metadata.pickle
hermit-hybrid-search/chroma_db/09eaf5fc-f42e-4435-8e8f-857a5375fb30/: index_metadata.pickle
hermit-hybrid-search/chroma_db/0b70c3f5-bb02-479a-bb38-a367b88bce78/: index_metadata.pickle
hermit-hybrid-search/chroma_db/11e9d9b5-c723-4b05-bc00-22c46ace74d4/: index_metadata.pickle
hermit-hybrid-search/chroma_db/1337597f-2331-49f9-811c-5ecf6cd59fdb/: index_metadata.pickle
(+49 files in other folders)
